--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.css
@@ -1,12 +1,13 @@
 header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
-    font-family: 'Poppins';
-
+    padding-top: 10px;
+    font-family: "Poppins", monospace;
 }
 
 header img {
@@ -20,19 +21,13 @@ header h1 {
     color: var(--branco);
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
-
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
     padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -49,12 +44,13 @@ header h1 {
     border-radius: 50px;
     outline: none;
     padding: 16px;
-    font-family: 'Poppins', monospace;
+    padding-top: 20px;
+    font-family: "Poppins", monospace;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -84,7 +80,11 @@ header .botoes button {
     border-radius: 3px;
 }
 
-
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
 
 main {
     display: flex;
