--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.css
@@ -1,28 +1,18 @@
 header {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
-    font-family: 'Poppins';
+    padding-top: 10px;
+    font-family: "Poppins", monospace;
 }
 
-#img-perfil-usuario {
-    width: 64px;
-    height: 64px;
-    margin-right: 50px;
-}
-
-img {
-    cursor: pointer;
-}
-
-header #logo {
+header img {
     width: 102px;
     height: 100px;
-    margin-left: 110px;
 }
 
 header h1 {
@@ -31,19 +21,13 @@ header h1 {
     color: var(--branco);
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-}
-
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
+    padding: 0 16px 0 16px;
     background-color: var(--azul-100);
-    padding: 5px 16px 0 16px;
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -54,18 +38,21 @@ header h1 {
     display: flex;
     align-items: center;
     background-color: var(--azul-100);
-    width: 800px;
+    width: 700px;
     height: 55px;
     border: none;
     border-radius: 50px;
     outline: none;
     padding: 16px;
-    font-family: 'Poppins', monospace;
+    padding-left: 25px;
+    padding-top: 20px;
+    font-family: "Poppins", monospace;
+    margin-left: -100px;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -74,22 +61,36 @@ header .barra-de-pesquisa img {
     height: 24px;
 }
 
+button {
+    cursor: pointer;
+}
+
+#img-perfil-usuario {
+    width: 64px;
+    height: 64px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
 nav {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: var(--azul-100);
-    gap: 55px;
-    margin-top: 10px;
-    text-underline-offset: 16.5px;
+    gap: 39px;
 }
 
 nav p {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 20px;
     color: var(--azul-400);
+    text-underline-offset: 18.5px;
 }
 
 section {
