--- a/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.css
@@ -1,12 +1,13 @@
 header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
-    font-family: 'Poppins';
-
+    padding-top: 10px;
+    font-family: "Poppins", monospace;
 }
 
 header img {
@@ -26,8 +27,7 @@ header h1 {
     padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -45,12 +45,12 @@ header h1 {
     outline: none;
     padding: 16px;
     padding-top: 20px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
