--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.css
@@ -1,19 +1,18 @@
 header {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
     padding-top: 10px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
 }
 
 header img {
     width: 102px;
     height: 100px;
-    margin-left: 110px;
 }
 
 header h1 {
@@ -28,9 +27,7 @@ header h1 {
     padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-    margin-left: 200px;
-
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -41,19 +38,21 @@ header h1 {
     display: flex;
     align-items: center;
     background-color: var(--azul-100);
-    width: 850px;
+    width: 700px;
     height: 55px;
     border: none;
     border-radius: 50px;
     outline: none;
     padding: 16px;
+    padding-left: 25px;
     padding-top: 20px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
+    margin-left: -100px;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -62,10 +61,30 @@ header .barra-de-pesquisa img {
     height: 24px;
 }
 
+button {
+    cursor: pointer;
+}
+
+header .botoes {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    gap: 20px;
+}
+
+header .botoes button {
+    background-color: var(--azul-100);
+    color: var(--azul-400);
+    border: solid 0px;
+    width: 150px;
+    height: 55px;
+    font-size: 16px;
+    border-radius: 3px;
+}
+
 #img-perfil-usuario {
     width: 64px;
     height: 64px;
-    margin-right: 50px;
 }
 
 .logo {
@@ -79,16 +98,16 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: var(--azul-100);
-    gap: 55px;
-    margin-top: 10px;
+    gap: 39px;
 }
 
 nav p {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 20px;
     color: var(--azul-400);
+    text-underline-offset: 18.5px;
 }
 
 main {
