--- a/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.css
@@ -1,13 +1,13 @@
 header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
     padding-top: 10px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
 }
 
 header img {
@@ -21,20 +21,13 @@ header h1 {
     color: var(--branco);
 }
 
-#img-perfil-usuario {
-    width: 64px;
-    height: 64px;
-    margin-right: 50px;
-}
-
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
     padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -51,13 +44,15 @@ header h1 {
     border-radius: 50px;
     outline: none;
     padding: 16px;
+    padding-left: 25px;
     padding-top: 20px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
+    margin-left: -100px;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -87,11 +82,15 @@ header .botoes button {
     border-radius: 3px;
 }
 
+#img-perfil-usuario {
+    width: 64px;
+    height: 64px;
+}
+
 .logo {
     display: flex;
     align-items: center;
     gap: 16px;
-    margin-left: 100px;
 }
 
 nav {
@@ -99,17 +98,16 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: var(--azul-100);
-    gap: 55px;
-    margin-top: 10px;
+    gap: 39px;
 }
 
 nav p {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 20px;
     color: var(--azul-400);
-    text-underline-offset: 16.5px;
+    text-underline-offset: 18.5px;
 }
 
 main {
