--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.css
@@ -7,7 +7,7 @@ header {
     width: 100%;
     height: 125px;
     padding-top: 10px;
-    font-family: 'Poppins', monospace;
+    font-family: "Poppins", monospace;
 }
 
 header img {
@@ -24,11 +24,10 @@ header h1 {
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
-    padding: 5px 16px 0 16px;
+    padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -45,12 +44,13 @@ header h1 {
     border-radius: 50px;
     outline: none;
     padding: 16px;
-    font-family: 'Poppins', monospace;
+    padding-top: 20px;
+    font-family: "Poppins", monospace;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -91,17 +91,16 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: var(--azul-100);
-    gap: 55px;
-    margin-top: 10px;
+    gap: 39px;
 }
 
 nav p {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 20px;
     color: var(--azul-400);
-    text-underline-offset: 16.5px;
+    text-underline-offset: 18.5px;
 }
 
 section {
