--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/a_arte.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/a_arte.css
@@ -1,18 +1,18 @@
 header {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
-    font-family: 'Poppins', monospace;
+    padding-top: 10px;
+    font-family: "Poppins", monospace;
 }
 
 header img {
     width: 102px;
     height: 100px;
-    margin-left: 110px;
 }
 
 header h1 {
@@ -24,12 +24,10 @@ header h1 {
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
-    padding: 5px 16px 0 16px;
+    padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-    margin-left: 200px;
-
+    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
@@ -40,18 +38,21 @@ header h1 {
     display: flex;
     align-items: center;
     background-color: var(--azul-100);
-    width: 850px;
+    width: 700px;
     height: 55px;
     border: none;
     border-radius: 50px;
     outline: none;
     padding: 16px;
-    font-family: 'Poppins', monospace;
+    padding-left: 25px;
+    padding-top: 20px;
+    font-family: "Poppins", monospace;
+    margin-left: -100px;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
+header .barra-de-pesquisa > input::placeholder {
     color: var(--azul-400);
-    font-family: 'Inter', serif;
+    font-family: "Inter", serif;
     font-size: 20px;
 }
 
@@ -60,16 +61,19 @@ header .barra-de-pesquisa img {
     height: 24px;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+button {
+    cursor: pointer;
 }
 
 #img-perfil-usuario {
     width: 64px;
     height: 64px;
-    margin-right: 50px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
 img, button {
