--- a/conteúdo/Projeto Interdisciplinar/style.css
+++ b/conteúdo/Projeto Interdisciplinar/style.css
@@ -91,17 +91,16 @@ nav {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 50px;
+  height: 55px;
   background-color: var(--azul-100);
-  gap: 55px;
-  margin-top: 10px;
+  gap: 39px;
 }
 
 nav p {
   font-family: "Inter";
   font-size: 20px;
   color: var(--azul-400);
-  text-underline-offset: 16.5px;
+  text-underline-offset: 18.5px;
 }
 
 main {
@@ -111,10 +110,10 @@ main {
 section {
   display: flex;
   flex-wrap: wrap;
-  margin: 90px 0 0 110px;
+  margin: 60px 0 0 110px;
 }
 
-main section > h2 {
+main section div > h2 {
   font-family: "Poppins", monospace;
   font-size: 36px;
   font-weight: 600;
@@ -127,7 +126,7 @@ main section h3 {
   font-size: 28px;
   font-weight: 500;
   color: var(--azul-400);
-  width: 1300px;
+  width: 230px;
   text-decoration: underline;
   margin: 7.5px 0 45px 20px;
 }
@@ -166,8 +165,15 @@ main section h3 {
   border: none;
   width: 100%;
   height: 100%;
+  border-radius: 3.5px;
   background-color: var(--azul-500);
   color: var(--branco);
   font-family: "Poppins", monospace;
   font-size: 20px;
+}
+
+#link-ver-mais {
+  display: flex;
+  width: 1300px;
+  height: 85px;
 }
